tests/snapshots/bugs-quantity_with_x_in_name-skills_0.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
capacitor/capacity             = 250.000000
capacitor/depletes_in          = -1.000000
capacitor/peak                 = 5.000000
capacitor/percentage           = 100.000000
capacitor/recharge             = 125.000000
capacitor/stable               = true
cpu/capacity                   = 240.000000
cpu/free                       = 240.000000
defense/armor/hp               = 175.000000
defense/armor/resist/em        = 59.999999
defense/armor/resist/expl      = 10.000002
defense/armor/resist/kin       = 25.000000
defense/armor/resist/therm     = 35.000002
defense/ehp                    = 868.111542
defense/recharge/armor         = 0.000000
defense/recharge/hull          = 0.000000
defense/recharge/passive       = 0.900000
defense/recharge/shield        = 0.000000
defense/shield/hp              = 225.000000
defense/shield/recharge        = 625.000000
defense/shield/resist/em       = 0.000000
defense/shield/resist/expl     = 50.000000
defense/shield/resist/kin      = 39.999998
defense/shield/resist/therm    = 19.999999
defense/structure/hp           = 200.000000
defense/structure/resist/em    = 32.999998
defense/structure/resist/expl  = 32.999998
defense/structure/resist/kin   = 32.999998
defense/structure/resist/therm = 32.999998
drones/active                  = 2.000000
drones/bandwidth               = 10.000000
drones/bandwidth_load          = 50.000000
drones/capacity                = 10.000000
drones/capacity_load           = 2200.000000
drones/dps                     = 0.000000
drones/range                   = 20.000000
navigation/agility             = 3.600000
navigation/align_time          = 5.988791
navigation/mass                = 1200.000000
navigation/speed               = 335.000000
navigation/warp_speed          = 5.000000
offense/alpha                  = 0.000000
offense/dps                    = 0.000000
offense/dps_with_reload        = 0.000000
offense/drone_dps              = 0.000000
power/capacity                 = 45.000000
power/free                     = 45.000000
targeting/lock_range           = 15.000000
targeting/max_locked_targets   = 5.000000
targeting/scan_resolution      = 750.000000
targeting/sensor_strength      = 4.000000
targeting/signature_radius     = 40.000000

dronebay_1-2/type  = 'Excavator' Mining Drone
dronebay_1-2/state = active

cargo_1-100/type  = Meson Exotic Plasma L
cargo_1-100/state = offline
