tests/snapshots/bugs-quantity_with_x_in_name-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills)"
---
ship/type                                         = Venture
ship/scanStrength                                 = 4.800000
ship/passiveShieldEffectiveRechargeRate           = 2.068965
ship/passiveShieldRechargeRate                    = 1.500000
ship/ehp                                          = 1085.139428
ship/shieldThermalDamageEffectiveResonance        = 0.200000
ship/shieldKineticDamageEffectiveResonance        = 0.150000
ship/shieldExplosiveDamageEffectiveResonance      = 0.125000
ship/shieldEmDamageEffectiveResonance             = 0.250000
ship/hullThermalDamageEffectiveResonance          = 0.167500
ship/hullKineticDamageEffectiveResonance          = 0.167500
ship/hullExplosiveDamageEffectiveResonance        = 0.167500
ship/hullEmDamageEffectiveResonance               = 0.167500
ship/armorThermalDamageEffectiveResonance         = 0.162500
ship/armorKineticDamageEffectiveResonance         = 0.187500
ship/armorExplosiveDamageEffectiveResonance       = 0.225000
ship/armorEmDamageEffectiveResonance              = 0.100000
ship/shieldEhp                                    = 387.931030
ship/hullEhp                                      = 373.134319
ship/armorEhp                                     = 324.074079
ship/shieldDamageEffectiveResonance               = 0.725000
ship/hullDamageEffectiveResonance                 = 0.670000
ship/armorDamageEffectiveResonance                = 0.675000
ship/droneCapacityLoad                            = 2200.000000
ship/droneActive                                  = 2.000000
ship/powerFree                                    = 56.250000
ship/cpuFree                                      = 300.000000
ship/capacitorDepletesIn                          = -1.000000
ship/capacitorPeakDeltaPercentage                 = 100.000000
ship/capacitorPeakDelta                           = 8.333333
ship/capacitorPeakRecharge                        = 8.333333
ship/alignTime                                    = 4.042434
ship/hp                                           = 250.000000
ship/powerOutput                                  = 56.250000
ship/maxVelocity                                  = 418.750000
ship/cpuOutput                                    = 300.000000
ship/rechargeRate                                 = 93750.000000
ship/agility                                      = 2.430000
ship/maxTargetRange                               = 18750.000000
ship/scanSpeed                                    = 1875.000000
ship/warpCapacitorNeed                            = 0.000001
ship/scanMagnetometricStrength                    = 4.800000
ship/shieldCapacity                               = 281.250000
ship/armorHP                                      = 218.750000
ship/maxResearchGangSize                          = 30.000000
ship/shipBonusGF                                  = 25.000000
ship/shieldRechargeRate                           = 468750.000000
ship/capacitorCapacity                            = 312.500000
ship/shieldUniformity                             = 1.000000
ship/shipBonus2AF                                 = 25.000000
ship/shipBonusGC                                  = 25.000000
ship/shipBonusCC                                  = 25.000000
ship/shipBonusMB                                  = 25.000000
ship/shipBonusCB                                  = 25.000000
ship/shipBonusAB                                  = 25.000000
ship/shipBonusMI                                  = 25.000000
ship/shipBonusAI                                  = 25.000000
ship/shipBonusCI                                  = 25.000000
ship/shipBonusGI                                  = 25.000000
ship/scanResolution                               = 937.500000
ship/shipBonusGF2                                 = 50.000000
ship/advancedAgility                              = 0.750000
ship/jumpDriveConsumptionAmount                   = 1000.000000
ship/advancedCapitalAgility                       = 0.750000
ship/jumpDriveCapacitorNeed                       = 0.750000
ship/droneBandwidthLoad                           = 50.000000
ship/miningFrigatesBonusOreMiningYield            = 25.000000
ship/shipBonusUF1                                 = 5.000000
ship/shipBonusUF2                                 = 5.000000
ship/shipBonusUC1                                 = 5.000000
ship/shipBonusUC2                                 = 5.000000
ship/shipBonusUB1                                 = 5.000000
ship/shipBonusUB2                                 = 5.000000
ship/miningFrigateBonusGasCloudHarvestingDuration = -25.000000
ship/conduitPassengerBonusModAdd                  = 25.000000
ship/shipBonusOreDestroyer1                       = 25.000000
ship/shipBonusOreDestroyer2                       = 25.000000
ship/shipBonusOreDestroyer3                       = 25.000000
ship/shipBonusSoEECS1                             = 25.000000
ship/shipBonusSoEECS2                             = 25.000000
ship/shipBonusSoEECS3                             = 25.000000
ship/shipBonusSoEECS4                             = 25.000000
ship/shipBonusSoEECS5                             = 25.000000
ship/shipBonusAB3                                 = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

dronebay_1-2/type             = 'Excavator' Mining Drone
dronebay_1-2/state            = active
dronebay_1-2/hp               = 1875.000000
dronebay_1-2/maxVelocity      = 343.750000
dronebay_1-2/maxRange         = 6250.000000
dronebay_1-2/damageMultiplier = 1.500000
dronebay_1-2/miningAmount     = 165.000000
dronebay_1-2/shieldCapacity   = 1875.000000
dronebay_1-2/armorHP          = 1250.000000

cargo_1-100/type  = Meson Exotic Plasma L
cargo_1-100/state = offline
